k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lambda
  labels:
    app: lambda
spec:
  selector:
    matchLabels:
      app: lambda
  template:
    metadata:
      labels:
        app: lambda
    spec:
      containers:
        - 
          name: lambda
          image: ghcr.io/devnull-twitch/lambda-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
      imagePullSecrets:
        - name: dockerconfigjson-ghcr
