k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lambda
spec:
  selector:
    app: lambda
  ports:
    - 
      port: 8081
