k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lambda-ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - lambda.devnullga.me
      secretName: lambda-devnullgame-cert-secret
  rules:
    - host: lambda.devnullga.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lambda
                port:
                  number: 8081
